--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>I love pizza</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio fugit sunt, quae esse non sed, saepe hic repellat harum molestias culpa expedita minus totam illo ab ad veniam ipsum reprehenderit.</p>
+    <img src="./Images/images.jpg" alt="">
 </body>
 </html>
